--- a/regresjawielowymiarowa.html
+++ b/regresjawielowymiarowa.html
@@ -408,11 +408,29 @@ div.tocify {
     <li>
       <a href="analizawariancjiaov.html">Analiza wariancji - aov</a>
     </li>
+  </ul>
+</li>
+<li class="dropdown">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+    Dzień 3
+     
+    <span class="caret"></span>
+  </a>
+  <ul class="dropdown-menu" role="menu">
+    <li>
+      <a href="cw3.html">Ćwiczenie</a>
+    </li>
     <li>
       <a href="tablicaanalizywariancjianova.html">Tablica analizy wariancji - anova</a>
     </li>
     <li>
       <a href="curvefitting.html">Curve fitting</a>
+    </li>
+    <li>
+      <a href="analizawariancjimanova.html">Analiza wariancji - manova</a>
+    </li>
+    <li>
+      <a href="miniprojekty.html">Miniprojekty</a>
     </li>
   </ul>
 </li>
