--- a/tablicaanalizywariancjianova.html
+++ b/tablicaanalizywariancjianova.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Dzień 2 - Tablica analizy wariancji - anova</title>
+<title>Dzień 3 - Tablica analizy wariancji - anova</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -408,11 +408,29 @@ div.tocify {
     <li>
       <a href="analizawariancjiaov.html">Analiza wariancji - aov</a>
     </li>
+  </ul>
+</li>
+<li class="dropdown">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+    Dzień 3
+     
+    <span class="caret"></span>
+  </a>
+  <ul class="dropdown-menu" role="menu">
+    <li>
+      <a href="cw3.html">Ćwiczenie</a>
+    </li>
     <li>
       <a href="tablicaanalizywariancjianova.html">Tablica analizy wariancji - anova</a>
     </li>
     <li>
       <a href="curvefitting.html">Curve fitting</a>
+    </li>
+    <li>
+      <a href="analizawariancjimanova.html">Analiza wariancji - manova</a>
+    </li>
+    <li>
+      <a href="miniprojekty.html">Miniprojekty</a>
     </li>
   </ul>
 </li>
@@ -428,7 +446,7 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">Dzień 2 - Tablica analizy wariancji - anova</h1>
+<h1 class="title toc-ignore">Dzień 3 - Tablica analizy wariancji - anova</h1>
 
 </div>
 
@@ -492,7 +510,7 @@ summary(model)</code></pre>
 </div>
 <div id="zmienne-jakościowe-objaśniające" class="section level2">
 <h2>Zmienne jakościowe objaśniające</h2>
-<p>Rozważmy przykład z danymi jakościowymi:</p>
+<p>Rozważmy przykład z danymi jakościowymi. Opisa danych: wynagrodzenia na uczelni. <code>rank</code> - AssocProf (prof. nadzwyczajny), AsstProf (adiunkt), Prof</p>
 <pre class="r"><code>library(car)</code></pre>
 <pre><code>## Warning: package &#39;car&#39; was built under R version 3.6.3</code></pre>
 <pre class="r"><code>data(&quot;Salaries&quot;)
