--- a/cw3.html
+++ b/cw3.html
@@ -467,10 +467,16 @@ div.tocify {
 </style>
 <div id="ćwiczenie" class="section level1">
 <h1>Ćwiczenie</h1>
-<p>Załaduj do R poniższą ramkę danych:</p>
+<ol style="list-style-type: decimal">
+<li>Załaduj do R poniższą ramkę danych:</li>
+</ol>
 <pre class="r"><code>load(url(&quot;https://github.com/pjastr/ASW/raw/master/cw3.rda&quot;))</code></pre>
 <p>W ramce są zawarte informacje o maksymalnej kwocie kredytu (pierwsza kolumna) względem pozostałych cech. Wykorzystaj metody regresji liniowej, aby wybrać najbardziej dopasowany model.</p>
-</div>
+<ol start="2" style="list-style-type: decimal">
+<li>Załaduj do R poniższą ramkę danych:</li>
+</ol>
+<pre class="r"><code>load(url(&quot;https://github.com/pjastr/ASW/raw/master/fish.rda&quot;))</code></pre>
+<p>W ramce są zawarte informacje o długości pewnego gatunku ryb względem jego wieku. Wykorzystaj metody regresji wielomianowej, aby wybrać najbardziej dopasowany model.</p>
 </div>
 
 
