--- a/miniprojekty.html
+++ b/miniprojekty.html
@@ -468,6 +468,8 @@ div.tocify {
 <div id="miniprojekty" class="section level1">
 <h1>Miniprojekty</h1>
 <p>Zestaw C - <a href="ZestawC.docx">docx</a>, <a href="ZestawC.pdf">pdf</a></p>
+<p>Formularz do przesłania odpowiedzi:</p>
+<p><a href="https://docs.google.com/forms/d/e/1FAIpQLSdlKxwgb4G_fS__6xlWzn6vTWkRcivkU97VnVxq8iPxAatnBQ/viewform?usp=sf_link" class="uri">https://docs.google.com/forms/d/e/1FAIpQLSdlKxwgb4G_fS__6xlWzn6vTWkRcivkU97VnVxq8iPxAatnBQ/viewform?usp=sf_link</a></p>
 </div>
 
 
